# pentatris

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  asm_tutorial.html  defs.bzl  extensions.bzl  pentatris_tutorial.html  run_test.sh
asm/: Board.asm  Tetrominos.asm  UserInterface.asm  common.asm  gameplay.asm  header.asm  hud.asm  main.asm  runtime.asm  tetris_music.asm
gfx/: Numbers.2bpp  TileAnimation.2bpp  UserInterface.2bpp  UserInterface.attrmap  UserInterface.tilemap  palette_data.inc  setup_sprites.inc  sprite_data.inc  sprite_defs.inc
inc/: Tetrominos.inc  UserInterface.inc  board.inc  common.inc  hud.inc  runtime.inc
lib/hUGEDriver/: hardware.inc
music/: hexfoil.py  hexfoil.uge  pentatris.old.py  pentatris.old.uge  pentatris.uge  transcribe.py  waveform.py
source/asm/: include
tests/: run_tests.js  test_Board.asm  test_Tetrominos.asm  test_UserInterface.asm  test_common.asm  test_gameplay.asm  test_hud.asm  test_runtime.asm
tools/: bg2bin.py  generate_pentominoes.py  music2asm.py  png2asm.py  wipe_for_tutorial.py
